[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/backgrounds/Backgound2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Qn1/qn1a.png" type="Texture" id=2]
[ext_resource path="res://Level1.gd" type="Script" id=3]
[ext_resource path="res://Assets/Qn1/qn1b.png" type="Texture" id=4]
[ext_resource path="res://Assets/McLaren-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/backgrounds/endline.png" type="Texture" id=6]
[ext_resource path="res://Assets/icons/tik.png" type="Texture" id=7]
[ext_resource path="res://Assets/icons/cross.png" type="Texture" id=8]
[ext_resource path="res://BackButton.tres" type="StyleBox" id=9]
[ext_resource path="res://Qn1Answer.gd" type="Script" id=10]
[ext_resource path="res://Qn2Answer.gd" type="Script" id=11]
[ext_resource path="res://Mark1.gd" type="Script" id=12]
[ext_resource path="res://Mark2.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 161, 108 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 414.0
margin_bottom = 896.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 1 )
centered = false

[node name="Qn" type="Label" parent="Control"]
margin_left = 46.0
margin_top = 108.0
margin_right = 368.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Picha ipi inaonesha ukatili
kwa watoto?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="Sprite" parent="Control"]
position = Vector2( 46, 211 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 10 )

[node name="Mark1" type="Sprite" parent="Control/Answer"]
visible = false
position = Vector2( 322, 212 )
texture = ExtResource( 8 )
script = ExtResource( 12 )

[node name="TouchButton1" type="TouchScreenButton" parent="Control"]
position = Vector2( 46, 211 )
shape = SubResource( 2 )

[node name="Alt_answer" type="Sprite" parent="Control"]
position = Vector2( 46, 482 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 11 )

[node name="Mark2" type="Sprite" parent="Control/Alt_answer"]
visible = false
position = Vector2( 322, 212 )
texture = ExtResource( 7 )
script = ExtResource( 13 )

[node name="TouchButton2" type="TouchScreenButton" parent="Control"]
position = Vector2( 46, 482 )
shape = SubResource( 2 )

[node name="Endline" type="Sprite" parent="Control"]
position = Vector2( 0, 853 )
texture = ExtResource( 6 )
centered = false

[node name="BackButton" type="Button" parent="Control"]
margin_left = 30.0
margin_top = 30.0
margin_right = 105.0
margin_bottom = 65.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 3 )
text = "Nyuma"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/TouchButton1" to="." method="_on_TouchButton1_pressed"]
[connection signal="pressed" from="Control/TouchButton2" to="." method="_on_TouchButton2_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
